按顺序整理
Signed-off-by: chinazyq <2054555+chinazyq@user.noreply.gitee.com>

--- a/dh.html
+++ b/dh.html
@@ -92,13 +92,53 @@
         <input type="text" id="search-bar" placeholder="搜索网址...">
         <ul class="link-list">
             <!-- 在这里添加按A-Z分类排序的链接项目 -->
+            <li class="link-item"><a href="https://xxb.ecust.edu.cn/cjwt/list.htm"># 信息办·常见问题</a></li>
+            <li class="link-item"><a href="https://xxb.ecust.edu.cn/7576/list.htm"># 信息办·新生服务</a></li>
+            <li class="link-item"><a href="http://ss.zyqs.xyz/"># Sharespace资料站</a></li>
+            <li class="link-item"><a href="https://file.ecust.cloud/"># 校内资料站</a></li>
+            <li class="link-item"><a href="/vpn.html"># 华理VPN链接转换工具</a></li>
+            <li class="link-item"><a href="https://qm.qq.com/q/Ld2LVGbIoo"># VR俱乐部QQ群</a></li>
             <li class="link-item"><a href="https://alist.xn--rhqr3ykwbm05aegjqxb.com/">AAlist资料站</a></li>
+            <li class="link-item"><a href="https://hqfw.ecust.edu.cn/hqecust/service/assets/images/code.jpg">B报修（微信小程序）</a></li>
+            <li class="link-item"><a href="http://172.20.17.6/">C测速（内网）</a></li>
+            <li class="link-item"><a href="https://cwc.ecust.edu.cn/">C财务处</a></li>
+            <li class="link-item"><a href="https://light.ecust.edu.cn/_web/_apps/lightapp/inquireScores/mobile/permit/wechat/pub/index.html">C成绩单（需在地址栏按回车）</a></li>
+            <li class="link-item"><a href="https://xiaoban.ecust.edu.cn/10381/list.htm">D地图</a></li>
+            <li class="link-item"><a href="/img/xh.jpg">D地图（徐汇）</a></li>
+            <li class="link-item"><a href="/img/fx.jpg">D地图（奉贤）</a></li>
+            <li class="link-item"><a href="https://xiaoban.ecust.edu.cn/10383/list.htm">D地址</a></li>
+            <li class="link-item"><a href="https://xiaoban.ecust.edu.cn/10380/list.htm">D电话黄页</a></li>
+            <li class="link-item"><a href="http://172.18.56.20/student/">D大学物理实验选课（内网）</a></li>
             <li class="link-item"><a href="https://cs.e.ecust.edu.cn/download/7ad0c1a96458db8dd0763dbd85fb4e0d">FFake Location.apk</a></li>
+            <li class="link-item"><a href="http://172.20.21.19/">F仿真物理实验（内网）</a></li>
+            <li class="link-item"><a href="https://172.20.7.70/">H华理云（内网IP）</a></li>
+            <li class="link-item"><a href="https://pan.ecust.edu.cn/">H华理云</a></li>
+            <li class="link-item"><a href="http://124.220.205.119/down.html">H华理健康APP（课活）</a></li>
             <li class="link-item"><a href="https://jwc.ecust.edu.cn/">J教务处信息网</a></li>
+            <li class="link-item"><a href="https://pay.ecust.edu.cn/">J缴费平台</a></li>
+            <li class="link-item"><a href="http://172.20.7.152/jsxsd/">J教务管理系统（内网IP）（需在地址栏按回车）</a></li>
+            <li class="link-item"><a href="https://inquiry.ecust.edu.cn/jsxsd/">J教务管理系统（选课、课表等）（需在地址栏按回车）</a></li>
+            <li class="link-item"><a href="https://light.ecust.edu.cn/_web/_apps/lightapp/studentSchedule/mobile/permit/app/pub/index.html">K课程表（需在地址栏按回车）</a></li>
+            <li class="link-item"><a href="https://mooc.s.ecust.edu.cn/course/441650000009241.html">L劳育课程（美食与生活）</a></li>
+            <li class="link-item"><a href="https://mooc.s.ecust.edu.cn/course/441650000009383.html">L劳育课程（园艺与生活）</a></li>
+            <li class="link-item"><a href="https://xxb.ecust.edu.cn/MATLAB_13818/list.htm">MMATLAB</a></li>
+            <li class="link-item"><a href="http://mc.ecustvr.top/">MMC Server（我的世界服务器）</a></li>
+            <li class="link-item"><a href="http://mj.wei7135.com/cmsindex.html">M梦境班车（需在微信中打开）</a></li>
+            <li class="link-item"><a href="https://jwc.ecust.edu.cn/pyfa/list.htm">P培养方案</a></li>
+            <li class="link-item"><a href="https://ecustpt.eu.org/">PPT站（ECUSTPT花梨月下）（内网）</a></li>
+            <li class="link-item"><a href="https://public.ecustpt.eu.org/">PPT站（ECUSTPT花梨月下）（公网）</a></li>
+            <li class="link-item"><a href="https://ecustpt-eu-org.sslvpn.ecust.edu.cn:8118/">PPT站（ECUSTPT花梨月下）（SSLVPN）</a></li>
             <li class="link-item"><a href="http://172.20.7.198/">S上网信息统计（内网）</a></li>
             <li class="link-item"><a href="https://ce-ecust.chemzoo.com">S实验教学平台</a></li>
-            <li class="link-item"><a href="https://zhxy.ecust.edu.cn/">Z资源与环境工程学院（资环学院）</a></li>
-            <li class="link-item"><a href="https://xiaoban.ecust.edu.cn/">X校长办公室</a></li>
+            <li class="link-item"><a href="https://hlsc.ecust.edu.cn/">S双创实践管理平台（内网）</a></li>
+            <li class="link-item"><a href="https://hlsc-ecust-edu-cn-s.sslvpn.ecust.edu.cn:8118/">S双创实践管理平台（SSLVPN）</a></li>
+            <li class="link-item"><a href="https://xxb.ecust.edu.cn/2013/0909/c7579a52284/page.htm">S宿舍上网布线方法</a></li>
+            <li class="link-item"><a href="https://lib.ecust.edu.cn/">T图书馆</a></li>
+            <li class="link-item"><a href="http://172.20.18.11/">T体育管理综合查询系统V2.0（课活查询）（内网）</a></li>
+            <li class="link-item"><a href="https://szcg.ecust.edu.cn/wx/">T体测与场馆预约（内网）</a></li>
+            <li class="link-item"><a href="https://szcg-ecust-edu-cn-s.sslvpn.ecust.edu.cn:8118/wx/">T体测与场馆预约（SSLVPN）</a></li>
+            <li class="link-item"><a href="https://tzcs.ecust.edu.cn/user/student-login">T体测成绩查询（内网）</a></li>
+            <li class="link-item"><a href="https://tzcs-ecust-edu-cn-s.sslvpn.ecust.edu.cn:8118/user/student-login">T体测成绩查询（SSLVPN）</a></li>
             <li class="link-item"><a href="https://www.720yun.com/t/13vk6e877qq">VVR校园</a></li>
             <li class="link-item"><a href="https://xxb.ecust.edu.cn/7651/list.htm">VVPN使用手册</a></li>
             <li class="link-item"><a href="https://sslvpn.ecust.edu.cn/">VVPN（WEB）</a></li>
@@ -106,64 +146,24 @@
             <li class="link-item"><a href="https://atrustdownload.sangfor.com/support/Software_Download/EasyConnectPhone.apk">VVPN（Android Phone客户端）</a></li>
             <li class="link-item"><a href="https://atrustdownload.sangfor.com/support/Software_Download/EasyConnectTablet.apk">VVPN（Android Pad客户端）</a></li>
             <li class="link-item"><a href="https://vpn.ecust.edu.cn/">VVPN（教职工）</a></li>
-            <li class="link-item"><a href="http://172.20.17.6/">C测速（内网）</a></li>
-            <li class="link-item"><a href="https://art.ecust.edu.cn/">Y艺术设计与传媒学院（艺设学院）</a></li>
-            <li class="link-item"><a href="https://ykt.ecust.edu.cn/">Y一卡通服务平台</a></li>
-            <li class="link-item"><a href="https://lib.ecust.edu.cn/">T图书馆</a></li>
-            <li class="link-item"><a href="http://172.20.21.19/">F仿真物理实验（内网）</a></li>
-            <li class="link-item"><a href="http://172.20.18.11/">T体育管理综合查询系统V2.0（课活查询）（内网）</a></li>
-            <li class="link-item"><a href="https://172.20.7.70/">H华理云（内网IP）</a></li>
-            <li class="link-item"><a href="https://pan.ecust.edu.cn/">H华理云</a></li>
-            <li class="link-item"><a href="http://124.220.205.119/down.html">H华理健康APP（课活）</a></li>
-            <li class="link-item"><a href="https://pay.ecust.edu.cn/">J缴费平台</a></li>
-            <li class="link-item"><a href="http://172.20.7.152/jsxsd/">J教务管理系统（内网IP）（需在地址栏按回车）</a></li>
-            <li class="link-item"><a href="https://inquiry.ecust.edu.cn/jsxsd/">J教务管理系统（选课、课表等）（需在地址栏按回车）</a></li>
-            <li class="link-item"><a href="https://cwc.ecust.edu.cn/">C财务处</a></li>
             <li class="link-item"><a href="https://xxb.ecust.edu.cn/wrzbh/list.htm">W微软正版化（Windows、Office)</a></li>
-            <li class="link-item"><a href="https://xxb.ecust.edu.cn/MATLAB_13818/list.htm">MMATLAB</a></li>
-            <li class="link-item"><a href="https://light.ecust.edu.cn/_web/_apps/lightapp/studentSchedule/mobile/permit/app/pub/index.html">K课程表（需在地址栏按回车）</a></li>
-            <li class="link-item"><a href="https://light.ecust.edu.cn/_web/_apps/lightapp/inquireScores/mobile/permit/wechat/pub/index.html">C成绩单（需在地址栏按回车）</a></li>
-            <li class="link-item"><a href="https://yx.ecust.edu.cn/">Y迎新系统</a></li>
-            <li class="link-item"><a href="https://hlsc.ecust.edu.cn/">S双创实践管理平台（内网）</a></li>
-            <li class="link-item"><a href="https://hlsc-ecust-edu-cn-s.sslvpn.ecust.edu.cn:8118/">S双创实践管理平台（SSLVPN）</a></li>
-            <li class="link-item"><a href="https://szcg.ecust.edu.cn/wx/">T体测与场馆预约（内网）</a></li>
-            <li class="link-item"><a href="https://szcg-ecust-edu-cn-s.sslvpn.ecust.edu.cn:8118/wx/">T体测与场馆预约（SSLVPN）</a></li>
-            <li class="link-item"><a href="https://tzcs.ecust.edu.cn/user/student-login">T体测成绩查询（内网）</a></li>
-            <li class="link-item"><a href="https://tzcs-ecust-edu-cn-s.sslvpn.ecust.edu.cn:8118/user/student-login">T体测成绩查询（SSLVPN）</a></li>
-            <li class="link-item"><a href="https://xiaoban.ecust.edu.cn/10381/list.htm">D地图</a></li>
-            <li class="link-item"><a href="/img/xh.jpg">D地图（徐汇）</a></li>
-            <li class="link-item"><a href="/img/fx.jpg">D地图（奉贤）</a></li>
-            <li class="link-item"><a href="https://xiaoban.ecust.edu.cn/10383/list.htm">D地址</a></li>
-            <li class="link-item"><a href="https://xiaoban.ecust.edu.cn/10380/list.htm">D电话黄页</a></li>
-            <li class="link-item"><a href="https://jwc.ecust.edu.cn/pyfa/list.htm">P培养方案</a></li>
-            <li class="link-item"><a href="https://ecustpt.eu.org/">PPT站（ECUSTPT花梨月下）（内网）</a></li>
-            <li class="link-item"><a href="https://public.ecustpt.eu.org/">PPT站（ECUSTPT花梨月下）（公网）</a></li>
-            <li class="link-item"><a href="https://ecustpt-eu-org.sslvpn.ecust.edu.cn:8118/">PPT站（ECUSTPT花梨月下）（SSLVPN）</a></li>
-            <li class="link-item"><a href="https://mooc.s.ecust.edu.cn/course/441650000009241.html">L劳育课程（美食与生活）</a></li>
-            <li class="link-item"><a href="https://mooc.s.ecust.edu.cn/course/441650000009383.html">L劳育课程（园艺与生活）</a></li>
-            <li class="link-item"><a href="https://hqfw.ecust.edu.cn/hqecust/service/assets/images/code.jpg">B报修（微信小程序）</a></li>
-            <li class="link-item"><a href="http://mc.ecustvr.top/">MMC Server（我的世界服务器）</a></li>
-            <li class="link-item"><a href="http://mj.wei7135.com/cmsindex.html">M梦境班车（需在微信中打开）</a></li>
-            <li class="link-item"><a href="https://i.ecust.edu.cn/">X信息门户</a></li>
+            <li class="link-item"><a href="https://xiaoban.ecust.edu.cn/">X校长办公室</a></li>
             <li class="link-item"><a href="https://www.ecust.edu.cn/595/list.htm">X学院列表</a></li>
+            <li class="link-item"><a href="https://i.ecust.edu.cn/">X信息门户</a></li>
             <li class="link-item"><a href="https://docs.qq.com/doc/DR1ppeld4eWVVblNH">X选课指南（大一）</a></li>
             <li class="link-item"><a href="https://docs.qq.com/doc/DWE9sd2VLREV3S1F4">X选课指南（大二）</a></li>
             <li class="link-item"><a href="https://xghall.ecust.edu.cn/">X学生工作管理服务平台（学工系统）（内网）</a></li>
             <li class="link-item"><a href="https://xghall-ecust-edu-cn-s.sslvpn.ecust.edu.cn:8118/">X学生工作管理服务平台（学工系统）（SSLVPN）</a></li>
-            <li class="link-item"><a href="https://zdgxyplatform.ecust.edu.cn/zdxy/index.action">Z中德合作办学管理交流平台（内网）</a></li>
-            <li class="link-item"><a href="https://zdgxyplatform-ecust-edu-cn.sslvpn.ecust.edu.cn:8118/zdxy/index.action">Z中德合作办学管理交流平台（SSLVPN）</a></li>
-            <li class="link-item"><a href="http://172.18.56.20/student/">D大学物理实验选课（内网）</a></li>
-            <li class="link-item"><a href="https://xxb.ecust.edu.cn/2013/0909/c7579a52284/page.htm">S宿舍上网布线方法</a></li>
-            <li class="link-item"><a href="https://xxb.ecust.edu.cn/7314/list.htm">Y邮箱客户端配置</a></li>
-            <li class="link-item"><a href="https://stu.mail.ecust.edu.cn/">Y邮箱登录（学生）</a></li>
             <li class="link-item"><a href="https://s.ecust.edu.cn/portal/">X学习平台老版本（需在地址栏按回车）</a></li>
             <li class="link-item"><a href="https://www.pgyer.com/xlist">XXlist（APP）</a></li>
-            <li class="link-item"><a href="https://xxb.ecust.edu.cn/cjwt/list.htm"># 信息办·常见问题</a></li>
-            <li class="link-item"><a href="https://xxb.ecust.edu.cn/7576/list.htm"># 信息办·新生服务</a></li>
-            <li class="link-item"><a href="http://ss.zyqs.xyz/"># Sharespace资料站</a></li>
-            <li class="link-item"><a href="https://file.ecust.cloud/"># 校内资料站</a></li>
-            <li class="link-item"><a href="/vpn.html"># 华理VPN链接转换工具</a></li>
-            <li class="link-item"><a href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=6RJx4nG0qXqKijn_MQbCIXgjaOM9Y7Ri&authKey=vd28pa2T16MF18HB76xGQKO8KD5ty%2FCt8CYRvbLpaBKOU%2FsK4ko2iSc2xIcTI41D&noverify=0&group_code=748846912"># VR俱乐部QQ群</a></li>
+            <li class="link-item"><a href="https://art.ecust.edu.cn/">Y艺术设计与传媒学院（艺设学院）</a></li>
+            <li class="link-item"><a href="https://ykt.ecust.edu.cn/">Y一卡通服务平台</a></li>
+            <li class="link-item"><a href="https://yx.ecust.edu.cn/">Y迎新系统</a></li>
+            <li class="link-item"><a href="https://xxb.ecust.edu.cn/7314/list.htm">Y邮箱客户端配置</a></li>
+            <li class="link-item"><a href="https://stu.mail.ecust.edu.cn/">Y邮箱登录（学生）</a></li>
+            <li class="link-item"><a href="https://zdgxyplatform.ecust.edu.cn/zdxy/index.action">Z中德合作办学管理交流平台（内网）</a></li>
+            <li class="link-item"><a href="https://zdgxyplatform-ecust-edu-cn.sslvpn.ecust.edu.cn:8118/zdxy/index.action">Z中德合作办学管理交流平台（SSLVPN）</a></li>
+            <li class="link-item"><a href="https://zhxy.ecust.edu.cn/">Z资源与环境工程学院（资环学院）</a></li>
         </ul>
     </div>
     <footer>
