更换短链接
Signed-off-by: chinazyq <2054555+chinazyq@user.noreply.gitee.com>

--- a/index.html
+++ b/index.html
@@ -81,13 +81,13 @@
         <!-- 轮播图片 -->
         <div class="carousel-inner">
             <div class="carousel-item active">
-            <a target="_blank" href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=TLNRHzrVbMK2TJbxOkNhCfyWCAD2BMhJ&authKey=btUpthAjvZT4%2BcsL9%2FqKWP7aCYWQ75oluC9sX0PZ%2BZo9%2BTWYBO6LajKWOYRV0DUg&noverify=0&group_code=922527299"><img decoding="async" src="img/covers.png" class="d-block" style="width:100%"></a>
+            <a target="_blank" href="https://qm.qq.com/q/Ld2LVGbIoo"><img decoding="async" src="img/covers.png" class="d-block" style="width:100%"></a>
             </div>
             <div class="carousel-item">
-            <a target="_blank" href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=TLNRHzrVbMK2TJbxOkNhCfyWCAD2BMhJ&authKey=btUpthAjvZT4%2BcsL9%2FqKWP7aCYWQ75oluC9sX0PZ%2BZo9%2BTWYBO6LajKWOYRV0DUg&noverify=0&group_code=922527299"><img decoding="async" src="img/cover1.png" class="d-block" style="width:100%"></a>
+            <a target="_blank" href="https://qm.qq.com/q/Ld2LVGbIoo"><img decoding="async" src="img/cover1.png" class="d-block" style="width:100%"></a>
             </div>
             <div class="carousel-item">
-            <a target="_blank" href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=TLNRHzrVbMK2TJbxOkNhCfyWCAD2BMhJ&authKey=btUpthAjvZT4%2BcsL9%2FqKWP7aCYWQ75oluC9sX0PZ%2BZo9%2BTWYBO6LajKWOYRV0DUg&noverify=0&group_code=922527299"><img decoding="async" src="img/cover3.png" class="d-block" style="width:100%"></a>
+            <a target="_blank" href="https://qm.qq.com/q/Ld2LVGbIoo"><img decoding="async" src="img/cover3.png" class="d-block" style="width:100%"></a>
             </div>
         </div>
         
@@ -103,7 +103,7 @@
     <div class="content container py-5">
         <h2 class="mb-4">公告</h2>
         <p>欢迎来到VR俱乐部的官方网站！在这里，你将有机会探索虚拟现实世界的奇妙之处。</p>
-        <p><a target="_blank" href="http://qm.qq.com/cgi-bin/qm/qr?_wv=1027&k=TLNRHzrVbMK2TJbxOkNhCfyWCAD2BMhJ&authKey=btUpthAjvZT4%2BcsL9%2FqKWP7aCYWQ75oluC9sX0PZ%2BZo9%2BTWYBO6LajKWOYRV0DUg&noverify=0&group_code=922527299">加入我们</a>，一起开启数字世界的冒险吧！</p>
+        <p><a target="_blank" href="https://qm.qq.com/q/Ld2LVGbIoo">加入我们</a>，一起开启数字世界的冒险吧！</p>
     </div>
     
     <footer>
