--- a/dh.html
+++ b/dh.html
@@ -72,7 +72,7 @@
                         <a class="nav-link" href="cgzs.html">成果展示</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="http://ss.zyqs.xyz/VR">活动影像</a>
+                        <a class="nav-link" href="http://ss.ecustvr.top/VR">活动影像</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="https://mp.weixin.qq.com/mp/appmsgalbum?action=getalbum&__biz=MzIzMDU3NzQ1MQ==&scene=1&album_id=2927847544494440450&count=3#wechat_redirect">使用攻略</a>
@@ -94,7 +94,7 @@
             <!-- 在这里添加按A-Z分类排序的链接项目 -->
             <li class="link-item"><a href="https://xxb.ecust.edu.cn/cjwt/list.htm"># 信息办·常见问题</a></li>
             <li class="link-item"><a href="https://xxb.ecust.edu.cn/7576/list.htm"># 信息办·新生服务</a></li>
-            <li class="link-item"><a href="http://ss.zyqs.xyz/"># Sharespace资料站</a></li>
+            <li class="link-item"><a href="http://ss.ecustvr.top/"># Sharespace资料站</a></li>
             <li class="link-item"><a href="https://file.ecust.cloud/"># 校内资料站</a></li>
             <li class="link-item"><a href="/vpn.html"># 华理VPN链接转换工具</a></li>
             <li class="link-item"><a href="https://qm.qq.com/q/Ld2LVGbIoo"># VR俱乐部QQ群</a></li>
