--- a/vpn.html
+++ b/vpn.html
@@ -98,7 +98,7 @@
                         <a class="nav-link" href="cgzs.html">成果展示</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="http://ss.zyqs.xyz/VR">活动影像</a>
+                        <a class="nav-link" href="http://ss.ecustvr.top/VR">活动影像</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="https://mp.weixin.qq.com/mp/appmsgalbum?action=getalbum&__biz=MzIzMDU3NzQ1MQ==&scene=1&album_id=2927847544494440450&count=3#wechat_redirect">使用攻略</a>
