--- a/history.html
+++ b/history.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>发展历程 - VR俱乐部</title>
-    <link rel="stylesheet" href="//bootcdn.ecustvr.top/ajax/libs/bootstrap/5.2.3/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://s4.zstatic.net/ajax/libs/bootstrap/5.2.3/css/bootstrap.min.css">
     <style>
         body {
             display: flex;
@@ -98,7 +98,7 @@
         </script>
     </footer>
 
-    <script src="//bootcdn.ecustvr.top/ajax/libs/popper.js/2.10.2/umd/popper.min.js"></script>
-    <script src="//bootcdn.ecustvr.top/ajax/libs/bootstrap/5.2.3/js/bootstrap.min.js"></script>
+    <script src="https://s4.zstatic.net/ajax/libs/popper.js/2.10.2/umd/popper.min.js"></script>
+    <script src="https://s4.zstatic.net/ajax/libs/bootstrap/5.2.3/js/bootstrap.min.js"></script>
 </body>
 </html>
