update dh.html. https://account.ecust.edu.cn/
Signed-off-by: bestzyq <21013965@mail.ecust.edu.cn>

--- a/dh.html
+++ b/dh.html
@@ -128,7 +128,7 @@
             <li class="link-item"><a href="https://ecustpt.eu.org/">PPT站（ECUSTPT花梨月下）（内网）</a></li>
             <li class="link-item"><a href="https://public.ecustpt.eu.org/">PPT站（ECUSTPT花梨月下）（公网）</a></li>
             <li class="link-item"><a href="https://ecustpt-eu-org.sslvpn.ecust.edu.cn:8118/">PPT站（ECUSTPT花梨月下）（SSLVPN）</a></li>
-            <li class="link-item"><a href="http://172.20.7.198/">S上网信息统计（内网）</a></li>
+            <li class="link-item"><a href="https://account.ecust.edu.cn/">S上网信息统计（内网）</a></li>
             <li class="link-item"><a href="https://ce-ecust.chemzoo.com">S实验教学平台</a></li>
             <li class="link-item"><a href="https://hlsc.ecust.edu.cn/">S双创实践管理平台（内网）</a></li>
             <li class="link-item"><a href="https://hlsc-ecust-edu-cn-s.sslvpn.ecust.edu.cn:8118/">S双创实践管理平台（SSLVPN）</a></li>
