--- a/403.html
+++ b/403.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>禁止访问 - VR俱乐部</title>
-    <link rel="stylesheet" href="https://s4.zstatic.net/ajax/libs/bootstrap/5.2.3/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://mirrors.sustech.edu.cn/cdnjs/ajax/libs/bootstrap/5.2.3/css/bootstrap.min.css">
     <style>
         body {
             display: flex;
@@ -73,7 +73,7 @@
         </script>
     </footer>
 
-    <script src="https://s4.zstatic.net/ajax/libs/popper.js/2.10.2/umd/popper.min.js"></script>
-    <script src="https://s4.zstatic.net/ajax/libs/bootstrap/5.2.3/js/bootstrap.min.js"></script>
+    <script src="https://mirrors.sustech.edu.cn/cdnjs/ajax/libs/popper.js/2.10.2/umd/popper.min.js"></script>
+    <script src="https://mirrors.sustech.edu.cn/cdnjs/ajax/libs/bootstrap/5.2.3/js/bootstrap.min.js"></script>
 </body>
 </html>
