--- a/vpn.html
+++ b/vpn.html
@@ -50,7 +50,7 @@
             convertedUrlElement.appendChild(linkElement);
         }
     </script>
-    <link rel="stylesheet" href="https://s4.zstatic.net/ajax/libs/bootstrap/5.2.3/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://mirrors.sustech.edu.cn/cdnjs/ajax/libs/bootstrap/5.2.3/css/bootstrap.min.css">
     <style>
         body {
             display: flex;
@@ -131,7 +131,7 @@
         </script>
     </footer>
 
-    <script src="https://s4.zstatic.net/ajax/libs/popper.js/2.10.2/umd/popper.min.js"></script>
-    <script src="https://s4.zstatic.net/ajax/libs/bootstrap/5.2.3/js/bootstrap.min.js"></script>
+    <script src="https://mirrors.sustech.edu.cn/cdnjs/ajax/libs/popper.js/2.10.2/umd/popper.min.js"></script>
+    <script src="https://mirrors.sustech.edu.cn/cdnjs/ajax/libs/bootstrap/5.2.3/js/bootstrap.min.js"></script>
 </body>
 </html>
