update dh.html. 增加电子书链接和ecust-courseshare镜像链接&注明Alist不可用
Signed-off-by: bestzyq <21013965@mail.ecust.edu.cn>

--- a/dh.html
+++ b/dh.html
@@ -95,10 +95,9 @@
             <li class="link-item"><a href="https://xxb.ecust.edu.cn/cjwt/list.htm"># 信息办·常见问题</a></li>
             <li class="link-item"><a href="https://xxb.ecust.edu.cn/7576/list.htm"># 信息办·新生服务</a></li>
             <li class="link-item"><a href="http://ss.ecustvr.top/"># Sharespace资料站</a></li>
-            <li class="link-item"><a href="https://file.ecust.cloud/"># 校内资料站</a></li>
             <li class="link-item"><a href="/vpn.html"># 华理VPN链接转换工具</a></li>
             <li class="link-item"><a href="https://qm.qq.com/q/Ld2LVGbIoo"># VR俱乐部QQ群</a></li>
-            <li class="link-item"><a href="https://alist.xn--rhqr3ykwbm05aegjqxb.com/">AAlist资料站</a></li>
+            <li class="link-item"><a href="https://alist.xn--rhqr3ykwbm05aegjqxb.com/"><del>AAlist资料站</del>（不可用）</a></li>
             <li class="link-item"><a href="https://hqfw.ecust.edu.cn/hqecust/service/assets/images/code.jpg">B报修（微信小程序）</a></li>
             <li class="link-item"><a href="http://172.20.17.6/">C测速（内网）</a></li>
             <li class="link-item"><a href="https://cwc.ecust.edu.cn/">C财务处</a></li>
@@ -107,8 +106,10 @@
             <li class="link-item"><a href="/img/xh.jpg">D地图（徐汇）</a></li>
             <li class="link-item"><a href="/img/fx.jpg">D地图（奉贤）</a></li>
             <li class="link-item"><a href="https://xiaoban.ecust.edu.cn/10383/list.htm">D地址</a></li>
+            <li class="link-item"><a href="https://url86.ctfile.com/d/22114186-47512219-507901?p=7568">D电子书</a></li>
             <li class="link-item"><a href="https://xiaoban.ecust.edu.cn/10380/list.htm">D电话黄页</a></li>
             <li class="link-item"><a href="http://172.18.56.20/student/">D大学物理实验选课（内网）</a></li>
+            <li class="link-item"><a href="https://cnb.cool/ecustcic/ecust-CourseShare">Eecust-CourseShare（CNB镜像）</a></li>
             <li class="link-item"><a href="https://cs.e.ecust.edu.cn/download/7ad0c1a96458db8dd0763dbd85fb4e0d">FFake Location.apk</a></li>
             <li class="link-item"><a href="http://172.20.21.19/">F仿真物理实验（内网）</a></li>
             <li class="link-item"><a href="https://172.20.7.70/">H华理云（内网IP）</a></li>
