增加Git导航&修正错误内容

--- a/dh.html
+++ b/dh.html
@@ -83,6 +83,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="https://wiki.ecustvr.top/">Wiki</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="http://git.ecustvr.top/">Git</a>
+                    </li>
                 </ul>
             </div>
         </div>
@@ -97,11 +100,12 @@
             <li class="link-item"><a href="http://ss.ecustvr.top/"># Sharespace资料站</a></li>
             <li class="link-item"><a href="/vpn.html"># 华理VPN链接转换工具</a></li>
             <li class="link-item"><a href="https://qm.qq.com/q/Ld2LVGbIoo"># VR俱乐部QQ群</a></li>
-            <li class="link-item"><a href="https://alist.xn--rhqr3ykwbm05aegjqxb.com/"><del>AAlist资料站</del>（不可用）</a></li>
+            <li class="link-item"><a href="http://alist.ecustvr.top">AAlist资料站（VR俱乐部提供）</a></li>
+            <li class="link-item"><a href="https://alist.xn--rhqr3ykwbm05aegjqxb.com/">AAlist资料站（wu2305提供）</a></li>
             <li class="link-item"><a href="https://hqfw.ecust.edu.cn/hqecust/service/assets/images/code.jpg">B报修（微信小程序）</a></li>
             <li class="link-item"><a href="http://172.20.17.6/">C测速（内网）</a></li>
             <li class="link-item"><a href="https://cwc.ecust.edu.cn/">C财务处</a></li>
-            <li class="link-item"><a href="https://light.ecust.edu.cn/_web/_apps/lightapp/inquireScores/mobile/permit/wechat/pub/index.html">C成绩单（需在地址栏按回车）</a></li>
+            <li class="link-item"><a href="https://light.ecust.edu.cn/_web/_apps/lightapp/inquireScores/mobile/permit/wechat/pub/index.html" rel="noopener noreferrer">C成绩单</a></li>
             <li class="link-item"><a href="https://xiaoban.ecust.edu.cn/10381/list.htm">D地图</a></li>
             <li class="link-item"><a href="/img/xh.jpg">D地图（徐汇）</a></li>
             <li class="link-item"><a href="/img/fx.jpg">D地图（奉贤）</a></li>
@@ -112,14 +116,15 @@
             <li class="link-item"><a href="https://cnb.cool/ecustcic/ecust-CourseShare">Eecust-CourseShare（CNB镜像）</a></li>
             <li class="link-item"><a href="https://cs.e.ecust.edu.cn/download/7ad0c1a96458db8dd0763dbd85fb4e0d">FFake Location.apk</a></li>
             <li class="link-item"><a href="http://172.20.21.19/">F仿真物理实验（内网）</a></li>
+            <li class="link-item"><a href="http://git.ecustvr.top/">GGit</a></li>
             <li class="link-item"><a href="https://172.20.7.70/">H华理云（内网IP）</a></li>
             <li class="link-item"><a href="https://pan.ecust.edu.cn/">H华理云</a></li>
             <li class="link-item"><a href="http://124.220.205.119/down.html">H华理健康APP（课活）</a></li>
             <li class="link-item"><a href="https://jwc.ecust.edu.cn/">J教务处信息网</a></li>
             <li class="link-item"><a href="https://pay.ecust.edu.cn/">J缴费平台</a></li>
-            <li class="link-item"><a href="http://172.20.7.152/jsxsd/">J教务管理系统（内网IP）（需在地址栏按回车）</a></li>
-            <li class="link-item"><a href="https://inquiry.ecust.edu.cn/jsxsd/">J教务管理系统（选课、课表等）（需在地址栏按回车）</a></li>
-            <li class="link-item"><a href="https://light.ecust.edu.cn/_web/_apps/lightapp/studentSchedule/mobile/permit/app/pub/index.html">K课程表（需在地址栏按回车）</a></li>
+            <li class="link-item"><a href="http://172.20.7.152/jsxsd/" rel="noopener noreferrer">J教务管理系统（内网IP）</a></li>
+            <li class="link-item"><a href="https://inquiry.ecust.edu.cn/jsxsd/" rel="noopener noreferrer">J教务管理系统（选课、课表等）</a></li>
+            <li class="link-item"><a href="https://light.ecust.edu.cn/_web/_apps/lightapp/studentSchedule/mobile/permit/app/pub/index.html" rel="noopener noreferrer">K课程表</a></li>
             <li class="link-item"><a href="https://mooc.s.ecust.edu.cn/course/441650000009241.html">L劳育课程（美食与生活）</a></li>
             <li class="link-item"><a href="https://mooc.s.ecust.edu.cn/course/441650000009383.html">L劳育课程（园艺与生活）</a></li>
             <li class="link-item"><a href="https://xxb.ecust.edu.cn/MATLAB_13818/list.htm">MMATLAB</a></li>
@@ -138,8 +143,8 @@
             <li class="link-item"><a href="http://172.20.18.11/">T体育管理综合查询系统V2.0（课活查询）（内网）</a></li>
             <li class="link-item"><a href="https://szcg.ecust.edu.cn/wx/">T体测与场馆预约（内网）</a></li>
             <li class="link-item"><a href="https://szcg-ecust-edu-cn-s.sslvpn.ecust.edu.cn:8118/wx/">T体测与场馆预约（SSLVPN）</a></li>
-            <li class="link-item"><a href="https://tzcs.ecust.edu.cn/user/student-login">T体测成绩查询（内网）</a></li>
-            <li class="link-item"><a href="https://tzcs-ecust-edu-cn-s.sslvpn.ecust.edu.cn:8118/user/student-login">T体测成绩查询（SSLVPN）</a></li>
+            <li class="link-item"><a href="https://tzcs.ecust.edu.cn/planList">T体测成绩查询（内网）</a></li>
+            <li class="link-item"><a href="https://tzcs-ecust-edu-cn-s.sslvpn.ecust.edu.cn:8118/planList">T体测成绩查询（SSLVPN）</a></li>
             <li class="link-item"><a href="https://www.720yun.com/t/13vk6e877qq">VVR校园</a></li>
             <li class="link-item"><a href="https://xxb.ecust.edu.cn/14027/list.htm">VVPN使用手册</a></li>
             <li class="link-item"><a href="https://sslvpn.ecust.edu.cn/">VVPN（WEB）</a></li>
@@ -155,7 +160,7 @@
             <li class="link-item"><a href="https://docs.qq.com/doc/DWE9sd2VLREV3S1F4">X选课指南（大二）</a></li>
             <li class="link-item"><a href="https://xghall.ecust.edu.cn/">X学生工作管理服务平台（学工系统）（内网）</a></li>
             <li class="link-item"><a href="https://xghall-ecust-edu-cn-s.sslvpn.ecust.edu.cn:8118/">X学生工作管理服务平台（学工系统）（SSLVPN）</a></li>
-            <li class="link-item"><a href="https://s.ecust.edu.cn/portal/">X学习平台老版本（需在地址栏按回车）</a></li>
+            <li class="link-item"><a href="https://s.ecust.edu.cn/portal/" rel="noopener noreferrer">X学习平台老版本</a></li>
             <li class="link-item"><a href="https://www.pgyer.com/xlist">XXlist（APP）</a></li>
             <li class="link-item"><a href="https://art.ecust.edu.cn/">Y艺术设计与传媒学院（艺设学院）</a></li>
             <li class="link-item"><a href="https://ykt.ecust.edu.cn/">Y一卡通服务平台</a></li>
