--- a/notice.html
+++ b/notice.html
@@ -55,6 +55,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="https://wiki.ecustvr.top/">Wiki</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="http://git.ecustvr.top/">Git</a>
+                    </li>
                 </ul>
             </div>
         </div>
